landing page without social media links

--- a/style.css
+++ b/style.css
@@ -6,8 +6,92 @@
 body {
   font-family: articulat-cf;
   background-color: white;
+  width: 100%;
 }
 
-.landingPage__container {
-  padding-top: 95px;
+.landing-page {
+  width: 100%;
+  height: 100vh;
+  /* background-color: yellow; */
+  display: flex;
+  justify-content: space-between;
+}
+
+.photos__container {
+  padding-top: 77px;
+  position: relative;
+  width: 30%;
+  height: 100%;
+}
+
+.bg-photo {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+}
+.bootle-photo {
+  height: 88%;
+  position: absolute;
+  top: 77px;
+  left: 41%;
+}
+
+.text__container {
+  margin: 77px 198px 77px 0;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+}
+
+.main-nav {
+  width: 100%;
+}
+
+.nav__elements {
+  list-style: none;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.nav__element {
+  margin-right: 71px;
+}
+.nav__element a {
+  font-size: 32px;
+  text-decoration: none;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  color: black;
+}
+
+.site-title {
+  font-size: 128px;
+  text-transform: uppercase;
+  padding-top: 15%;
+  display: inline-block;
+  letter-spacing: 1px;
+}
+
+.buttons__container {
+  padding-top: 10%;
+}
+
+.buttons__container a {
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 32px;
+  margin-right: 30px;
+  border: 3px solid black;
+  padding: 38px 22px;
+}
+
+.buy--button {
+  background-color: black;
+  color: white;
+}
+
+.contact--button {
+  color: black;
 }
