--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
   height: 100vh;
   /* background-color: yellow; */
   display: flex;
-  justify-content: space-between;
+  /* justify-content: space-between; */
 }
 
 .photos__container {
@@ -22,6 +22,7 @@ body {
   position: relative;
   width: 30%;
   height: 100%;
+  margin-right: 15%;
 }
 
 .bg-photo {
@@ -59,7 +60,7 @@ body {
   margin-right: 71px;
 }
 .nav__element a {
-  font-size: 32px;
+  font-size: 24px;
   text-decoration: none;
   text-transform: uppercase;
   letter-spacing: 1px;
@@ -67,24 +68,24 @@ body {
 }
 
 .site-title {
-  font-size: 128px;
+  font-size: 100px;
   text-transform: uppercase;
-  padding-top: 15%;
+  padding-top: 25%;
   display: inline-block;
   letter-spacing: 1px;
 }
 
 .buttons__container {
-  padding-top: 10%;
+  padding-top: 15%;
 }
 
 .buttons__container a {
   text-decoration: none;
   text-transform: uppercase;
-  font-size: 32px;
+  font-size: 24px;
   margin-right: 30px;
   border: 3px solid black;
-  padding: 38px 22px;
+  padding: 22px 38px;
 }
 
 .buy--button {
