--- a/style.css
+++ b/style.css
@@ -9,90 +9,25 @@ body {
   width: 100%;
 }
 
-.landing-page {
+.landing-page-home {
   width: 100%;
   height: 100vh;
-  /* background-color: yellow; */
-  display: flex;
-  /* justify-content: space-between; */
+  background-color: red;
 }
 
-.photos__container {
-  padding-top: 77px;
-  position: relative;
+.social-media__container {
   width: 30%;
   height: 100%;
-  margin-right: 15%;
+  background-image: url("photos/bgPhoto.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  position: relative;
 }
 
-.bg-photo {
+.social-media__container img {
   position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
-}
-.bootle-photo {
-  height: 88%;
-  position: absolute;
-  top: 77px;
-  left: 41%;
-}
-
-.text__container {
-  margin: 77px 198px 77px 0;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  align-content: center;
-}
-
-.main-nav {
-  width: 100%;
-}
-
-.nav__elements {
-  list-style: none;
-  display: flex;
-  justify-content: flex-end;
-}
-
-.nav__element {
-  margin-right: 71px;
-}
-.nav__element a {
-  font-size: 24px;
-  text-decoration: none;
-  text-transform: uppercase;
-  letter-spacing: 1px;
-  color: black;
-}
-
-.site-title {
-  font-size: 100px;
-  text-transform: uppercase;
-  padding-top: 25%;
-  display: inline-block;
-  letter-spacing: 1px;
-}
-
-.buttons__container {
-  padding-top: 15%;
-}
-
-.buttons__container a {
-  text-decoration: none;
-  text-transform: uppercase;
-  font-size: 24px;
-  margin-right: 30px;
-  border: 3px solid black;
-  padding: 22px 38px;
-}
-
-.buy--button {
-  background-color: black;
-  color: white;
-}
-
-.contact--button {
-  color: black;
+  top: 97px;
+  height: 82%;
+  transform: translateX(-50%);
+  /* width: 100%; */
 }
