--- a/style.css
+++ b/style.css
@@ -12,7 +12,10 @@ body {
 .landing-page-home {
   width: 100%;
   height: 100vh;
-  background-color: red;
+  background-color: white;
+  display: flex;
+  justify-content: space-between;
+  position: relative;
 }
 
 .social-media__container {
@@ -83,4 +86,74 @@ body {
   height: 82%;
   transform: translateX(-50%);
   /* width: 100%; */
+}
+
+.text-part__container {
+  width: 60%;
+  padding: 97px;
+}
+
+.main-nav {
+  width: 100%;
+}
+
+.nav__elements {
+  list-style: none;
+  display: flex;
+  justify-content: space-between;
+  margin-right: 97px;
+}
+
+.nav__element {
+  margin-right: 81px;
+}
+
+.nav__element a {
+  color: black;
+  text-decoration: none;
+  font-size: 32px;
+  text-transform: uppercase;
+}
+
+.site-title {
+  font-size: 128px;
+  padding-right: 198px;
+  margin-top: 100px;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+}
+
+.buttons__container {
+  margin-top: 50px;
+}
+
+.buttons__container a {
+  text-decoration: none;
+  text-transform: uppercase;
+  margin-right: 30px;
+  font-size: 32px;
+  padding: 37px 24px;
+}
+
+.buy--button {
+  color: white;
+  background-color: black;
+  border: 4px solid black;
+}
+
+.contact--button {
+  border: 4px solid black;
+  color: black;
+}
+
+.messanger__container {
+  position: absolute;
+  bottom: 97px;
+  right: 198px;
+  width: 44px;
+  height: 44px;
+}
+
+.messanger__container i {
+  font-size: 44px;
 }
