--- a/style.css
+++ b/style.css
@@ -1,159 +1,127 @@
+:root {
+  --main-black-color: rgb(8, 8, 8);
+  --main-white-color: rgb(248, 248, 248);
+}
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
+
 body {
-  font-family: articulat-cf;
-  background-color: white;
   width: 100%;
+  min-height: 100vh;
+  background-color: var(--main-white-color);
+  color: var(--main-black-color);
+  font-family: articulat-cf;
+  font-size: 24px;
 }
 
-.landing-page-home {
+.header {
   width: 100%;
   height: 100vh;
-  background-color: white;
-  display: flex;
-  justify-content: space-between;
   position: relative;
+  z-index: 1;
 }
 
-.social-media__container {
+.header-background {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  z-index: -1;
+}
+
+.background-photo {
   width: 30%;
   height: 100%;
-  background-image: url("photos/bgPhoto.png");
+  background: url(photos/bgPhoto.png);
   background-size: cover;
-  background-repeat: no-repeat;
+}
+
+.background-header-color {
+  width: 70%;
+  height: 100%;
+  background: url(photos/bgNoise.png);
+  background-position: center;
+}
+
+.header__container {
+  width: 100%;
+  height: 100%;
+  padding: 5% 10%;
+  z-index: 10;
+  display: flex;
+}
+
+.social-media-links__container {
+  width: 20vw;
+  height: 100%;
   position: relative;
+  margin-right: 20vh;
 }
 
-.social-media__container .mini-logo {
+.bootle-img {
+  width: 100%;
+  height: 105%;
   position: absolute;
-  /* width: 60px; */
-  top: 97px;
+  top: 0;
   left: 50%;
-  transform: translateX(-50%);
 }
 
-.social-media {
-  position: absolute;
-  top: 50%;
-  left: 45%;
-  transform: translate(-50%, -50%);
-}
-
-.social_media__links {
-  list-style: none;
-  position: relative;
-}
-
-.social_media__links::before {
-  content: "";
-  width: 2px;
-  height: 25px;
-  background-color: white;
-  position: absolute;
-  top: -50px;
-  left: 50%;
-  transform: translateX(-50%);
-  border-radius: 2px;
-}
-
-.social_media__links::after {
-  content: "";
-  width: 2px;
-  height: 25px;
-  background-color: white;
-  position: absolute;
-  bottom: -50px;
-  left: 50%;
-  transform: translateX(-50%);
-  border-radius: 2px;
-}
-
-.social-media__link {
-  margin: 25px 0;
-}
-
-.social-media__link i {
-  color: white;
-  font-size: 32px;
-}
-
-.social-media__container .bootle {
-  position: absolute;
-  top: 97px;
-  height: 82%;
-  transform: translateX(-50%);
-  /* width: 100%; */
-}
-
-.text-part__container {
-  width: 60%;
-  padding: 97px;
+.nav-title__container {
+  width: 50vw;
 }
 
 .main-nav {
   width: 100%;
+  position: relative;
+}
+
+.main-nav::after {
+  content: "";
+  width: 20px;
+  height: 2px;
+  background-color: var(--main-black-color);
+  position: absolute;
+  top: 50%;
+  right: 0;
+  transform: translateY(-50%);
+  border-radius: 45%;
 }
 
 .nav__elements {
-  list-style: none;
   display: flex;
   justify-content: space-between;
-  margin-right: 97px;
+  list-style: none;
+  width: 100%;
 }
 
 .nav__element {
-  margin-right: 81px;
-}
-
-.nav__element a {
-  color: black;
-  text-decoration: none;
-  font-size: 32px;
   text-transform: uppercase;
+  margin-right: 10%;
 }
 
 .site-title {
-  font-size: 128px;
-  padding-right: 198px;
-  margin-top: 100px;
+  font-size: 96px;
   text-transform: uppercase;
-  letter-spacing: 1px;
+  max-width: 30vw;
+  margin-top: 15%;
 }
 
-.buttons__container {
-  margin-top: 50px;
+/* ///////////////////////////////////// */
+.about {
+  width: 100%;
+  height: 100vh;
 }
 
-.buttons__container a {
-  text-decoration: none;
-  text-transform: uppercase;
-  margin-right: 30px;
-  font-size: 32px;
-  padding: 37px 24px;
+.product {
+  width: 100%;
+  height: 100vh;
 }
-
-.buy--button {
-  color: white;
-  background-color: black;
-  border: 4px solid black;
-}
-
-.contact--button {
-  border: 4px solid black;
-  color: black;
-}
-
-.messanger__container {
-  position: absolute;
-  bottom: 97px;
-  right: 198px;
-  width: 44px;
-  height: 44px;
-}
-
-.messanger__container i {
-  font-size: 44px;
+.contact {
+  background-color: var(--main-black-color);
 }
