--- a/style-old.css
+++ b/style-old.css
@@ -199,3 +199,41 @@ body {
   font-size: 32px;
   padding: 37px 24px;
 } */
+
+
+
+
+
+///////////////
+
+
+.about-background {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
+
+.background-about-color {
+  width: 70%;
+  height: 100%;
+  background-color: var(--main-white-color);
+}
+
+.background-photo-about {
+  width: 30%;
+  height: 100%;
+  background: url(photos/vodka-about.png);
+  background-size: cover;
+}
+
+.product {
+  width: 100%;
+  height: 100vh;
+}
+.contact {
+  background-color: var(--main-black-color);
+}
