--- a/style.css
+++ b/style.css
@@ -492,9 +492,9 @@
   }
 
   .header__container {
-    margin: 4% 8%;
-    height: 84%;
-    width: 70%;
+    padding: 4% 8%;
+    height: 100%;
+    width: 100%;
     position: relative;
   }
 
@@ -577,8 +577,8 @@
 
   .messanger__container {
     position: absolute;
-    bottom: 0;
-    right: 0;
+    bottom: 8%;
+    right: 8%;
     font-size: 32px;
   }
 }
