--- a/style.css
+++ b/style.css
@@ -459,6 +459,8 @@
   body {
     font-size: 18px;
     width: 100%;
+    color: var(--main-black-color);
+    font-family: articulat-cf;
   }
 
   .header {
@@ -545,31 +547,96 @@
   }
 
   .nav-title__container {
+    width: 100%;
+    min-height: 30vh;
+    padding: 12% 0;
+    display: flex;
+    flex-direction: column;
   }
 
   .main-nav {
-    display: none;
+    position: fixed;
+    top: 4%;
+    right: 12%;
   }
 
-  .main-nav::after {
+  .burger-bar {
+    width: 30px;
+    height: 2px;
+    background-color: var(--main-black-color);
+    position: relative;
+  }
+
+  .burger-bar::before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 10px;
+    background-color: var(--main-black-color);
+  }
+
+  .burger-bar::after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: -10px;
+    background-color: var(--main-black-color);
   }
 
   .nav__elements {
+    display: none;
   }
 
   .nav__element {
   }
 
   .site-title {
+    width: 90%;
+    font-size: 48px;
+    text-transform: uppercase;
+    text-align: center;
+    margin: 12% auto;
+    position: relative;
+  }
+
+  .site-title::before {
+    content: "";
+    width: 20px;
+    height: 2px;
+    background-color: var(--main-black-color);
+    position: absolute;
+    top: -20%;
+    left: 50%;
+    transform: translateX(-50%);
   }
 
   .buttons__container {
+    display: flex;
+    width: 100%;
+    height: 15%;
+    justify-content: center;
+    align-items: center;
   }
 
   .buy--button {
+    text-transform: uppercase;
+    text-decoration: none;
+    color: var(--main-white-color);
+    background-color: var(--main-black-color);
+    padding: 8px 12px;
+    margin-right: 20px;
+    border: 2px solid black;
   }
 
   .contact--button {
+    text-transform: uppercase;
+    text-decoration: none;
+    color: var(--main-black-color);
+    padding: 8px 12px;
+    margin-right: 20px;
+    border: 2px solid black;
   }
 
   .contact--button i {
@@ -577,7 +644,7 @@
 
   .messanger__container {
     position: absolute;
-    bottom: 8%;
+    bottom: 12%;
     right: 8%;
     font-size: 32px;
   }
