--- a/style.css
+++ b/style.css
@@ -116,6 +116,7 @@
   .main-nav {
     width: 100%;
     position: relative;
+    z-index: 200;
   }
 
   .main-nav::after {
@@ -448,6 +449,7 @@
 
   .contact__list {
     margin: 10% 0;
+    text-transform: uppercase;
   }
 
   .contact-number {
@@ -567,6 +569,7 @@
     height: 2px;
     background-color: var(--main-black-color);
     position: relative;
+    z-index: 1000;
   }
 
   .burger-bar::before {
@@ -714,33 +717,192 @@
   }
 
   .product {
+    display: flex;
+    flex-direction: column;
+    background: url(photos/bgNoise2.png);
+    background-size: cover;
   }
 
   .product-background {
+    width: 100%;
+    height: 35vh;
+    background: url(photos/product-mobile.png);
+    background-size: cover;
+    position: relative;
+    margin-bottom: 16%;
+    margin-top: 8%;
   }
 
   .product-background::after {
+    content: "";
+    width: 20px;
+    height: 2px;
+    background-color: var(--main-black-color);
+    position: absolute;
+    bottom: -10%;
+    left: 50%;
+    transform: translateX(-50%);
   }
 
   .background-photo-product {
+    display: none;
   }
 
   .background-product-color {
-  }
-
-  .header__container {
+    display: none;
   }
 
   .product-text-container {
+    padding: 0% 8% 30% 8%;
+    text-align: center;
   }
 
   .product .section-title {
+    text-align: center;
+    text-transform: uppercase;
+    margin-bottom: 40px;
   }
 
   .product-first-text,
   .product-second-text {
+    text-align: justify;
+    margin: 30px 0;
+    text-align-last: center;
+    -moz-text-align-last: center;
+    line-height: 24px;
   }
 
   .read-more-product--button {
+    text-transform: uppercase;
+    text-decoration: none;
+    color: var(--main-white-color);
+    background-color: var(--main-black-color);
+    padding: 12px 18px;
+    margin: 0 auto;
+    display: inline-block;
+    border: 2px solid black;
+  }
+
+  .contact {
+    min-height: 100vh;
+    background-color: var(--main-black-color);
+    padding: 8% 8%;
+    position: relative;
+  }
+
+  .contact::before {
+    content: "";
+    width: 84%;
+    height: 40vh;
+    background: url(photos/contactBg.png);
+    background-size: cover;
+    position: absolute;
+    top: -12%;
+    z-index: 50;
+  }
+
+  .contact .mini-logo {
+    display: none;
+  }
+
+  .contact::after {
+    content: "PRIVACY POLICY";
+    position: absolute;
+    bottom: 8%;
+    left: 50%;
+    transform: translateX(-50%);
+    font-size: 10px;
+    color: var(--main-white-color);
+  }
+
+  .contact-social-media {
+    position: absolute;
+    top: 60%;
+    width: 84%;
+  }
+
+  .contact-social-media__links {
+    display: flex;
+    justify-content: center;
+    list-style: none;
+    position: relative;
+  }
+
+  .contact-social-media__links::before {
+    content: "";
+    width: 20px;
+    height: 2px;
+    background-color: var(--main-white-color);
+    position: absolute;
+    top: 50%;
+    left: 18%;
+    transform: translateY(-50%);
+  }
+
+  .contact-social-media__links::after {
+    content: "";
+    width: 20px;
+    height: 2px;
+    background-color: var(--main-white-color);
+    position: absolute;
+    top: 50%;
+    right: 18%;
+    transform: translateY(-50%);
+  }
+
+  .contact-social-media__link {
+    color: var(--main-white-color);
+    font-size: 32px;
+    margin: 0 10px;
+  }
+
+  .contact-img {
+    display: none;
+  }
+
+  .contact-text__container {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .mini-site-title {
+    color: var(--main-white-color);
+    width: 90%;
+    font-size: 48px;
+    text-transform: uppercase;
+    text-align: center;
+    position: absolute;
+    top: 30%;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+
+  .mini-site-title::after {
+    content: "";
+    width: 20px;
+    height: 2px;
+    background-color: var(--main-white-color);
+    position: absolute;
+    top: -18%;
+    left: 50%;
+    transform: translateX(-50%);
+    border-radius: 20%;
+  }
+  .contact__list {
+    margin-top: 40%;
+    color: var(--main-white-color);
+    font-size: 12px;
+    text-align: center;
+    text-transform: uppercase;
+    position: absolute;
+    bottom: 12%;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 100%;
+  }
+
+  .contact-number {
+    margin: 10px 0;
   }
 }
